# proposal-arraybuffer-detach

./: .gitignore  CMakeLists.txt  README.md  bench-render.mjs  detach-vs-transfer.mjs  overview.md  package.json  setup-cmake.mjs
.github/workflows/: demonstration.yml
cxx/: compare.mjs  v8.cxx
demo/: detach-vs-transfer.mjs  helpers.mjs
demo/cxx/: compare.mjs  napi.cxx  setup-cmake.mjs  v8.cxx
demo/gc-pressure/: Dockerfile  index.mjs
demo/http/: Dockerfile  bun.mjs  deno.mjs  k6.ts  run.ps1  run.sh
demo/node:http/: k6.ts  run.ps1  run.sh
demo/node_http/: k6.ts  run.ps1  run.sh  server.mjs
gc-pressure/: Dockerfile  index.mjs
