CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
CMAKE_POLICY(SET CMP0042 NEW)
CMAKE_POLICY(SET CMP0091 NEW)
PROJECT(Detach VERSION 1.0 LANGUAGES CXX)
INCLUDE(demo/cxx/paths.cmake)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(MSVC)
  ADD_COMPILE_OPTIONS(/Zc:__cplusplus)
endif()

ADD_LIBRARY(v8 SHARED demo/cxx/v8.cxx)
SET_TARGET_PROPERTIES(v8 PROPERTIES PREFIX "" SUFFIX ".node")
TARGET_INCLUDE_DIRECTORIES(v8 PRIVATE
  ${NODE_INCLUDE}
)
TARGET_LINK_LIBRARIES(v8 PRIVATE 
  ${NODE_LIB}
)
if(WIN32)
  TARGET_LINK_LIBRARIES(v8 PRIVATE 
    delayimp
  )
endif()

ADD_LIBRARY(napi SHARED demo/cxx/napi.cxx)
SET_TARGET_PROPERTIES(napi PROPERTIES PREFIX "" SUFFIX ".node")
TARGET_INCLUDE_DIRECTORIES(napi PRIVATE
  ${NAPI_INCLUDE} ${NODE_INCLUDE}
)
TARGET_LINK_LIBRARIES(napi PRIVATE 
  ${NODE_LIB}
)
if(WIN32)
  TARGET_LINK_LIBRARIES(napi PRIVATE 
    delayimp
  )
endif()
